Fixed filename from duaas.htnml to duaa.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="nav-list">
                 <li><a href="index.html" class="nav-link" id="home-link">Home</a></li>
                 <li><a href="about.html" class="nav-link" id="about-link">About Us</a></li>
-                <li><a href="duaas.html" class="nav-link" id="duaas-link">Find Duaas</a></li>
+                <li><a href="duaa.html" class="nav-link" id="duaa-link">Find Duaas</a></li>
                 <li><a href="contact.html" class="nav-link" id="contact-link">Contact</a></li>
             </ul>
         </nav>
