fixed link that get started goes to

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
     </footer>
 
     <script>
-        // Enable "Get Started" button to redirect to duaas.html
+        // Enable "Get Started" button to redirect to duaa.html
         document.addEventListener('DOMContentLoaded', () => {
             const btn = document.getElementById('getStartedBtn');
             if (btn) {
                 btn.addEventListener('click', () => {
-                    window.location.href = 'duaas.html';
+                    window.location.href = 'duaa.html';
                 });
             }
         });
